🐞 fix header alignment of username, lang and logout

--- a/hcu-urban-model-builder-client/app/styles/_header.scss
+++ b/hcu-urban-model-builder-client/app/styles/_header.scss
@@ -2,6 +2,10 @@
   margin-bottom: 0;
 }
 
+.navbar-nav {
+  align-items: center;
+}
+
 .navbar.bg-secondary,
 .navbar.dark {
   color: $white;
